--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="panel" data-x-pos="0" data-y-pos="0">
           <div class="background-blacksmoke">
             <iframe
-              
-              height="120%"
+              width="100%"
+              height="100%"
               src="https://www.youtube.com/embed/s_eGGVj8GlY?si=XqaqSO4XQvUk5_Q9&amp;controls=0&autoplay=1&mute=1&loop=1&playlist=s_eGGVj8GlY&controls=0&rel=0&"
               title="YouTube video player"
               frameborder="0"
